# DashboardFailureToPay

./: .gitignore  Dockerfile  README.md  api_app.py  data_pulling.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_dashboard_app.py  streamlit_webpage_plotter.py
app/: api_app.py  data_pulling.py  streamlit_dashboard_app.py  streamlit_webpage_plotter.py
fichier_api/: joblib_lgbm0_Model.pkl  lgbm_beta_3_Model_.joblib
models/v1/: model.joblib
scripts/: entrypoint.sh  evaluate.sh  preprocess.sh  train.sh
