[project]
name = "dashboardfailuretopay"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "fastapi (>=0.109.0,<0.110.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "pandas (>=2.2.0,<2.3.0)",
    "matplotlib (>=3.8.2,<3.9.0)",
    "shap (>=0.43.0,<0.44.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "joblib (>=1.3.2,<1.4.0)",
    "cachetools (>=5.3.2,<5.4.0)",
    "polars (>=1.24.0,<2.0.0)",
    "lightgbm (>=4.2.0,<4.3.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
