[tool.poetry]
name = "dashboardfailuretopay"
version = "0.1.0"
description = ""
authors = ["donatien konan <donatien.konan.pro@gmail.com>"]
readme = "README.md"

package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"  # Must match `requires-python` constraints
fastapi = ">=0.109.0,<0.110.0"
streamlit = ">=1.43.2,<2.0.0"
pandas = "2.1.4"
matplotlib = ">=3.8.2,<3.9.0"
shap = ">=0.43.0,<0.44.0"
plotly = ">=6.0.0,<7.0.0"
requests = ">=2.32.3,<3.0.0"
joblib = "1.5.0"
cachetools = ">=5.3.2,<5.4.0"
polars = ">=1.24.0,<2.0.0"
lightgbm = ">=4.2.0,<4.3.0"
uvicorn = { version = ">=0.34.0,<0.35.0", extras = ["standard"] }
scikit-learn = ">=1.3.2,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
